# pysvi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/pysvi/: __init__.py  calibration.py  models.py
tests/: conftest.py  test_calibration.py  test_models.py
